--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,26 @@
 body {
-  background-color: #e2e3e5;
-  background: url("../img/cool-background.png") 100% / auto;
+  background: rgb(214, 51, 132);
+  background: -moz-linear-gradient(
+    155deg,
+    rgba(214, 51, 132, 1) 0%,
+    rgba(102, 16, 242, 1) 50%,
+    rgba(13, 110, 253, 1) 100%
+  );
+  background: -webkit-linear-gradient(
+    155deg,
+    rgba(214, 51, 132, 1) 0%,
+    rgba(102, 16, 242, 1) 50%,
+    rgba(13, 110, 253, 1) 100%
+  );
+  background: linear-gradient(
+    155deg,
+    rgba(214, 51, 132, 1) 0%,
+    rgba(102, 16, 242, 1) 50%,
+    rgba(13, 110, 253, 1) 100%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#d63384",endColorstr="#0d6efd",GradientType=1);
   scroll-behavior: smooth;
+  min-height: calc(100vh - 2rem);
 }
 
 .header {
