Ajustes de tabulação
- Criada a tab de configurações
- Criada a tab de histórico
- Preenchida a tab de informações com a tabela de operadores
- Reativada a configuração de VF ou 10 inserida na tab de configurações
- Movido conteúdo da tab da calculadora para um arquivo a parte
- Tabulação feita com fetch()

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,18 +28,20 @@ body {
   top: 0;
 }
 
-#btnInfo {
-  right: -2rem;
-}
-
-tr > td:last-child {
+#table-resposta tr > td:last-child {
   font-weight: bold;
   background-color: #e2e3e5;
   border: 1px solid #cbccce;
 }
 
-th {
+#table-resposta th {
   background-color: #e2e3e5;
+}
+
+#table-info td {
+  border-collapse: collapse;
+  border: 1px solid #cbccce;
+  text-align: center;
 }
 
 .nav-pills {
@@ -55,6 +57,12 @@ th {
 
 .nav-pills .nav-link {
   background-color: #0d6efd;
+  color: white;
+}
+
+.nav-pills .nav-link.recurso,
+.nav-link.disabled {
+  background-color: #cbccce;
   color: white;
 }
 
