--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
-body {
+body,
+.splash {
   background: rgb(214, 51, 132);
   background: -moz-linear-gradient(
     155deg,
@@ -21,6 +22,33 @@ body {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#d63384",endColorstr="#0d6efd",GradientType=1);
   scroll-behavior: smooth;
   min-height: calc(100vh - 2rem);
+}
+
+.splash {
+  opacity: 1;
+  -webkit-transition: opacity 500ms linear;
+  transition: opacity 500ms linear;
+}
+
+.splash .fa-calculator {
+  animation: change-color 3s ease infinite;
+}
+@keyframes change-color {
+  0% {
+    color: rgba(214, 51, 132, 1);
+  }
+  25% {
+    color: rgba(102, 16, 242, 1);
+  }
+  50% {
+    color: rgba(13, 110, 253, 1);
+  }
+  75% {
+    color: rgba(102, 16, 242, 1);
+  }
+  100% {
+    color: rgba(214, 51, 132, 1);
+  }
 }
 
 .header {
@@ -46,7 +74,7 @@ body {
 
 .nav-pills {
   margin-bottom: -0.4rem;
-  z-index: 999;
+  z-index: 2;
 }
 
 .nav-pills .nav-link.active,
